<resources>
    <string name="app_name">ABSReporting</string>
    <string name="email">Email Id</string>
    <string name="next">Next</string>
    <string name="action_settings">Settings</string>
    <string name="passowrd">Password</string>
    <string name="login">Login</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="fullName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="location">Address</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="home">Are you at home</string>
    <string name="signUp">Sign Up</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="submit">Submit</string>
    <string name="back">BACK</string>
    <string name="home_quarantine">About Home Quarantines</string>
    <string name="quarantine_guidelines">Quarantine Guidelines</string>
    <string name="action_notification">notification</string>
    <string name="action_logout">logout</string>
    <string name="action_share">Share</string>
    <string name="action_help">help</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="title_sign_up">Sign up</string>
    <string name="title_forget">Forget Password</string>
    <string name="title_advertisement">Advertisement</string>
    <string name="title_aboutus">About Us</string>
    <string name="title_holidaylist">Holiday List</string>
    <string name="title_attendancelist">My Attendance</string>
    <string name="title_applyleave">Apply Leave</string>
    <string name="title_attendance">Attendance</string>
    <string name="title_fuelreport">Fuel Report</string>
    <string name="title_notification">Notification</string>
    <string name="title_reportproblem">Report a problem</string>
    <string name="title_mynote">My Notes</string>
    <string name="title_myfuel">Fuel Expenses</string>
    <string name="title_taskdetails">Task Details</string>
    <string name="title_change">Change Password</string>
    <string name="title_takephoto">Field Reporting</string>
    <string name="title_reportlog">Report Log</string>
    <string name="title_report_statstics">Report and analysis</string>
    <string name="title_myaccount">My Account</string>
    <string name="title_pharmacy">Pharmacy</string>
    <string name="title_marketing">Marketing</string>
    <string name="title_realestate">Real Estate</string>
    <string name="title_reportdetails">Report Details</string>
    <string name="title_One">Select Report Type</string>
    <string name="title_add_service">Add Fuel Expense</string>
    <string name="title_mytask">My Task</string>
    <string name="title_edit_service">Edit Fuel Expense</string>
    <string name="dialog_message">Welcome to Alert Dialog</string>
    <string name="dialog_title"></string>
    <string name="note_title">Lorem Ipsum</string>
    <string name="note_description">Lorem Ipsum is simply dummy text of the printing and typesetting industry</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="slno">Slno</string>
    <string name="type">Type</string>
    <string name="nophoto">No.Of photo</string>

    <string name="slno1">1</string>
    <string name="type1">Marketing</string>
    <string name="nophoto1">1</string>
    <string name="middle">:</string>
    <string name="About">A rose is a woody perennial flowering plant of the genus Rosa, in the family Rosaceae, or the flower it bears. There are over three hundred species and thousands of cultivars.</string>
    <string name="Something">Marketing is a matching process by which a producer provides a marketing mix(product, price, promotion) that meets consumer demand or a target market within the limits of society.</string>
    <string name="describe">Describe</string>
    <string name="description">Description:</string>
    <string name="title_week">Weekly</string>
    <string name="title_todaytask">Today Task</string>
    <string name="title_uptask">Upcoming Task</string>
    <string name="title_comptask">Completed Task</string>
    <string name="title_month">Monthly</string>
    <string name="map_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAQPqXTe-NVdwO-B_R3qFVhz3R4Q6C4-5c</string>
    <string name="channel_name">Channel name</string>
    <string name="channel_description">Channel description</string>
    <string name="snooze">Snooze</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="no_address_found">Sorry, no address found</string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="address_found">Address found</string>
    <string name="service_not_available">Sorry, the service is not available</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>
    <string name="no_geocoder_available">No geocoder available</string>
</resources>
