<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <!--    <androidx.appcompat.widget.Toolbar-->
    <!--        android:id="@+id/toolbar"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:background="@color/white"-->
    <!--        android:minHeight="?attr/actionBarSize"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="350dp"
        android:layout_height="95dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/slno"
                    android:layout_width="150dp"
                    android:layout_height="30dp"
                    android:text="@string/slno"
                    android:textStyle="bold"
                    android:padding="5dp"
                    android:layout_marginTop="3dp">
                </TextView>

                <TextView
                    android:id="@+id/colonslno"
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:text="@string/middle"
                    android:textStyle="bold"
                    android:padding="5dp"
                    android:layout_marginTop="3dp">
                </TextView>

                <TextView
                    android:id="@+id/tv_slno"
                    android:layout_width="150dp"
                    android:layout_height="30dp"
                    android:text="@string/slno1"
                    android:padding="5dp"
                    android:layout_marginTop="3dp">
                </TextView>



            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
               android:layout_marginTop="30dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/type"
                    android:layout_width="150dp"
                    android:layout_height="30dp"
                    android:text="@string/type"
                    android:textStyle="bold"
                    android:padding="5dp"
                    android:layout_weight="1"
                    android:layout_marginTop="3dp">
                </TextView>

                <TextView
                    android:id="@+id/colontype"
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:text="@string/middle"
                    android:textStyle="bold"
                    android:padding="5dp"
                    android:layout_weight="1"
                    android:layout_marginTop="3dp">
                </TextView>

                <TextView
                    android:id="@+id/tv_type"
                    android:layout_width="150dp"
                    android:layout_height="30dp"
                    android:text="@string/type1"
                    android:padding="5dp"
                    android:layout_weight="1"
                    android:layout_marginTop="3dp">
                </TextView>



            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="60dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/no"
                    android:layout_width="150dp"
                    android:layout_height="30dp"
                    android:text="@string/nophoto"
                    android:textStyle="bold"
                    android:padding="5dp"
                    android:layout_weight="1"
                    android:layout_marginTop="3dp">
                </TextView>

                <TextView
                    android:id="@+id/colonno"
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:text="@string/middle"
                    android:textStyle="bold"
                    android:padding="5dp"
                    android:layout_weight="1"
                    android:layout_marginTop="3dp">
                </TextView>

                <TextView
                    android:id="@+id/tv_no"
                    android:layout_width="150dp"
                    android:layout_height="30dp"
                    android:text="@string/nophoto1"
                    android:padding="5dp"
                    android:layout_weight="1"
                    android:layout_marginTop="3dp">
                </TextView>
            </LinearLayout>


    </androidx.cardview.widget.CardView>
<!--        </LinearLayout>-->
<!--    </ScrollView>-->

</LinearLayout>


    <!--<?xml version="1.0" encoding="utf-8"?>-->
    <!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--    xmlns:tools="http://schemas.android.com/tools"-->
    <!--    android:layout_width="match_parent"-->
    <!--    android:layout_height="match_parent"-->
    <!--    android:orientation="vertical"-->
    <!--    android:background="@color/white"-->
    <!--    tools:context=".ReportFragment">-->

    <!--    &lt;!&ndash; TODO: Update blank fragment layout &ndash;&gt;-->
    <!--&lt;!&ndash;    <androidx.recyclerview.widget.RecyclerView&ndash;&gt;-->
    <!--&lt;!&ndash;        android:id="@+id/recview"&ndash;&gt;-->
    <!--&lt;!&ndash;        android:layout_marginTop="60dp"&ndash;&gt;-->
    <!--&lt;!&ndash;        android:layout_width="match_parent"&ndash;&gt;-->
    <!--&lt;!&ndash;        android:layout_height="match_parent">&ndash;&gt;-->
    <!--&lt;!&ndash;    </androidx.recyclerview.widget.RecyclerView>&ndash;&gt;-->
    <!--    <TextView-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="Report Log"></TextView>-->
    <!--</LinearLayout>-->



